--- a/css/resume-main.scss
+++ b/css/resume-main.scss
@@ -160,7 +160,7 @@ p.description
     font-size: 14px;
     margin-right: 8px;
 }
-a.contact-icon-link:hover
+a.contact-icon-link:hover, a.contact-icon-link:focus
 {
     color: #F0EBE6;
     text-decoration: none;
