--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,13 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
   
   <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.title }}</title>
-  <link rel="icon" type="image/png" href="/favicon.png">
+  
+  <!-- <link rel="icon" type="image/png" href="/favicon.png"> -->
+  <link rel="icon" type="image/png" href="/favicon-16x16.png?v=2" sizes="16x16">
+  <link rel="icon" type="image/png" href="/favicon-24x24.png?v=2" sizes="24x24">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png?v=2" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-48x48.png?v=2" sizes="48x48">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?v=2">
   
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   
@@ -18,6 +24,5 @@
   <!-- <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" /> -->
   
   <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script type="text/javascript" src="{{ site.baseurl }}/js/arcane.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/script.js"></script>
 </head>
