--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -5,8 +5,11 @@
 {
     // border-top: 5px solid $grey-color-dark;
     // border-bottom: 1px solid rgba($nav-color, 0.5);
-        
-    min-height: 56px;
+    background-color: $nav-bg-color;
+    // min-height: $nav-height;
+    padding-top: $spacing-unit;
+    padding-bottom: $spacing-unit;
+    @extend %clearfix;
     
     // Positioning context for the mobile navigation icon
     position: relative;
@@ -17,87 +20,134 @@
         &:hover, &:focus, &:active
         {
             opacity: 1;
+            color: #F0EBE6;
+            text-decoration: none;
         }
     }
 }
 
 .site-title
 {
-    font-size: $font-size-h2;
-    font-family: $font-stack-arcane-top;
-    line-height: 56px;
-    letter-spacing: -1px;
+    font-size: $font-size-h1;
+    font-family: $header-font-family;
+    // line-height: $nav-height;
+    // letter-spacing: -1px;
     margin-bottom: 0;
+    line-height: 0.8;
+    
     float: left;
     
-    // &,
-    // &:visited 
-    // {
-    //     color: $grey-color-dark;
-    // }
+    .first-name
+    {
+        font-weight: bold;
+        color: white;
+    }
+    .last-name
+    {
+        font-weight: bold;
+        color: $nav-color;
+    }
+    
+    &:hover
+    {
+        text-decoration: none;
+        // text-decoration-color: $nav-color;
+        
+        .first-name
+        {
+            color: $nav-color;
+        }
+        .last-name
+        {
+            color: white;
+        }
+    }
+    
+    @include media-query($on-laptop)
+    {
+        font-size: ($font-size-h1 + $font-size-h2) / 2;
+    }
+    
+    @include media-query($on-palm)
+    {
+        font-size: $font-size-h2;
+    }
 }
 
 .site-nav 
 {
-    float: right;
-    line-height: 56px;
+    // float: right;
+    // line-height: $nav-height;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
     
     .menu-icon 
     {
         display: none;
     }
     
-    .page-link 
+    .page-link
     {
         // color: $nav-color;
         line-height: $base-line-height;
         
         font-size: $font-size-h4;
-        font-family: $font-stack-arcane-mid;
+        // font-family: $header-font-family;
         
         // Gaps between nav items, but not on the first one
-        &:not(:first-child) 
+        &:not(:first-child)
         {
             margin-left: 20px;
         }
     }
     
+    @include media-query($on-laptop)
+    {
+        .page-link
+        {
+            font-size: $font-size-h4 - 2;
+        }
+    }
     @include media-query($on-palm)
     {
-        position: absolute;
-        top: 9px;
-        right: 30px;
+        // position: absolute;
+        top: -3px;
+        // right: 30px;
         // background-color: $background-color;
         // border: 1px solid $grey-color-light;
         // border-radius: 5px;
-        text-align: right;
+        // text-align: right;
         
-        padding-top: 10px;
+        // padding-top: 10px;
         
         .menu-icon
         {
-            border-radius: 5px;
+            // border-radius: 5px;
             
             display: block;
             float: right;
-            width: 36px;
-            height: 26px;
+            // width: 36px;
+            // height: 26px;
             line-height: 0;
             text-align: center;
             
-            font-size: 18px;
+            font-size: $font-size-h2;
         }
         
         .trigger 
         {
             clear: both;
             display: none;
+            
+            padding-bottom: 5px;
+            background-color: $nav-bg-color;
+            box-shadow: 0px 8px 17px 0px rgba(0, 0, 0, 0.2), 0px 6px 20px 0px rgba(0, 0, 0, 0.19);
         }
         
         &:hover .trigger 
         {
             display: block;
-            padding-bottom: 5px;
         }
         
         .page-link 
@@ -105,6 +155,11 @@
             display: block;
             padding: 5px 10px;
             z-index: 50;
+            
+            &:not(:first-child)
+            {
+                margin-left: 0;
+            }
         }
     }
 }
@@ -121,6 +176,14 @@ hr
 {
     // border-top: 1px solid rgba($nav-color, 0.5 * $nav-opacity);
     padding: $spacing-unit 0;
+    color: rgba(white, 0.61);
+    background-color: $nav-bg-color;
+    
+    a:hover, a:focus, a:active
+    {
+        color: #F0EBE6;
+        text-decoration: none;
+    }
 }
 
 .footer-heading 
@@ -139,7 +202,6 @@ hr
 .footer-col-wrapper 
 {
     font-size: $base-font-size - 1;
-    color: rgba($text-color, 0.51);
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 }
@@ -150,8 +212,9 @@ hr
     margin-bottom: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
     
-    width: -webkit-calc(33.3% - (#{$spacing-unit} / 2));
-    width:         calc(33.3% - (#{$spacing-unit} / 2));
+    // width: -webkit-calc(33.3% - (#{$spacing-unit} / 2));
+    // width:         calc(33.3% - (#{$spacing-unit} / 2));
+    width: 33.3%;
 }
 /* 
 .footer-col-1
@@ -172,8 +235,9 @@ hr
     .footer-col 
     {
         float: none;
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
+        // width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+        // width:         calc(100% - (#{$spacing-unit} / 2));
+        width: 100%;
     }
     
     .footer-col + .footer-col
@@ -192,9 +256,21 @@ hr
 /**
  * Page content
  */
-.page-content 
+.page-content
 {
-    padding: $spacing-unit 0;
+    padding-top: $spacing-unit;
+    padding-bottom: $spacing-unit;
+    
+    a
+    {
+        color : $link-color;
+    }
+    a:hover, a:focus, a:active
+    {
+        color : $link-hover-color;
+    }
+    
+    @extend %clearfix;
 }
 
 .page-heading 
@@ -202,7 +278,7 @@ hr
     font-size: 20px;
 }
 
-.post-list 
+.post-list
 {
     margin-left: 0;
     list-style: none;
@@ -238,12 +314,12 @@ hr
 .post-title 
 {
     // font-size: $font-size-h1;
-    letter-spacing: -1px;
-    line-height: 1;
+    // letter-spacing: -1px;
+    line-height: $header-line-height;
     
     @include media-query($on-laptop) 
     {
-        font-size: $font-size-h1 - 4;
+        font-size: $font-size-h2 - 2;
     }
 }
 
@@ -255,29 +331,29 @@ hr
     {
         font-size: $base-font-size - 2;
         
-        h2 
+        h1, .h1
         {
-            font-size: $font-size-h2 - 4;
+            font-size: $font-size-h1 - 2;
         }
-        h3 
+        h2, .h2
         {
-            font-size: $font-size-h3 - 4;
+            font-size: $font-size-h2 - 2;
         }
-        h4
+        h3, .h3
+        {
+            font-size: $font-size-h3 - 2;
+        }
+        h4, .h4
         {
             font-size: $font-size-h4 - 2;
         }
-        h5
+        h5, .h5
         {
             font-size: $font-size-h5 - 2;
-        }h6
+        }
+        h6, .h6
         {
             font-size: $font-size-h6 - 2;
-        }
-        
-        .folio-brief-col .brief
-        {
-            margin-top: $font-size-h4 - 2;
         }
     }
 }
