--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,9 +28,9 @@ dl, dd, ol, ul, figure
  */
 body 
 {
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    line-height: $base-line-height;
+    font-family: $font-family-base;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
     font-weight: 300;
     color: $text-color;
     background-color: $background-color;
@@ -96,7 +96,7 @@ figure > img
 
 figcaption 
 {
-    font-size: $small-font-size;
+    font-size: $font-size-small;
 }
 
 
@@ -126,7 +126,7 @@ li
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6
 {
     font-weight: 500;
-    line-height: $header-line-height;
+    line-height: $line-height-header;
     
     margin-top:     1em;
     margin-bottom:  0.5em;
@@ -147,11 +147,11 @@ li
 }
 .h1, .h2, .h3, h1, h2, h3
 {
-    font-family: $header-font-family;
+    font-family: $font-family-header;
 }
 .h4, .h5, .h6, h4, h5, h6
 {
-    font-family: $base-font-family;
+    font-family: $font-family-base;
 }
 .h1, h1
 {
@@ -225,7 +225,7 @@ blockquote
     filter    : progid:DXImageTransform.Microsoft.gradient(startColorstr='#80ffffff', endColorstr='#00ffffff', GradientType=1); // IE6-9
     
     padding-left: 4px + $spacing-unit / 2;
-    font-size: $base-font-size + 2;
+    font-size: $font-size-base + 2;
     letter-spacing: -1px;
     font-style: italic;
     
@@ -243,7 +243,7 @@ blockquote
 pre,
 code
 {
-    font-size: $base-font-size - 1;
+    font-size: $font-size-base - 1;
     border: 1px solid #dde;
     border-radius: 3px;
     background-color: #eef;
