--- a/css/gift-list.scss
+++ b/css/gift-list.scss
@@ -36,12 +36,6 @@ body
     font-size        : $font-size-base;
 }
 
-// a
-// {
-//     font-family: $font-body;
-//     font-size: 14px;
-// }
-
 ol
 {
     margin: 0;
@@ -60,7 +54,6 @@ ol
         {
             content: counter(list-num) ".";
             position: absolute;
-            // top: 0;
             left: 0;
         }
         
@@ -91,15 +84,17 @@ ol.sublist {
 
 ul
 {
-    font-size    : $font-size-sub;
+    font-size    : $font-size-detail;
     list-style   : none;
     padding-left : 10px;
     margin       : 0;
     
+    li
+    {
+        
+    }
     li.note
     {
-        // margin: 0;
-        // padding: 0;
         padding-left: 1.1em;
         font-size: inherit;
         
@@ -127,25 +122,7 @@ ul
                 margin-left: -1.1em;
             }
         }
-        // &::before
-        // {
-        //     display: inline-block;
-        //     font-family: FontAwesome;
-        //     font-style: normal;
-        //     font-weight: normal;
-        //     line-height: 1;
-        //     font-size-adjust: none;
-        //     font-stretch: normal;
-        //     font-feature-settings: normal;
-        //     font-language-override: normal;
-        //     font-kerning: auto;
-        //     font-synthesis: weight style;
-        //     font-variant: normal;
-        //     font-size: inherit;
-        //     text-rendering: auto;
-            
-        //     content: "\f06a";
-        // }
+        
         > p
         {
             margin: 0;
@@ -154,12 +131,9 @@ ul
     li.print-url
     {
         padding: 0;
-        // color: inherit;
-        // background-color: inherit;
-        // border: none;
         
         font-family: $font-url;
-        font-size: 0.8em;
+        font-size:   $font-size-small;
         
         visibility: hidden;
     }
@@ -213,8 +187,6 @@ ul
 
 .top-header
 {
-    // margin  : 0 -35px 15px;
-    // padding : 10px 35px;
     margin-bottom: ($page-margin * 2 / 3);
     
     text-align  : center;
@@ -251,9 +223,7 @@ ul
 
 .page-body
 {
-    // font-family : $font-body;
-    // font-size   : $font-size-base;
-    line-height: 1.1;
+    line-height: $line-height-gift;
 }
 
 .page
@@ -288,10 +258,7 @@ ul
 }
 .page-content
 {
-    // margin-left: 35px;
-    // margin-right: 35px;
     margin: $page-margin;
-    // height: $page-height - 15px;
     height: $page-height - ($page-margin * 2);
 }
 
@@ -301,8 +268,6 @@ ul
     background : none;
     width      : $page-width !important;
     max-width  : $page-width !important;
-    // font-size  : 0;
-    // padding    : 0 35px;
     position   : relative;
     margin: 0 auto;
 }
