--- a/css/gift-list.scss
+++ b/css/gift-list.scss
@@ -62,6 +62,11 @@ ol
             text-decoration: underline;
         }
     }
+    
+    p + &
+    {
+        padding-top: $font-size-small * $line-height-gift;
+    }
 }
 ol.sublist {
     > li
