Remove awful font-weight: 300 on body
Add it to .page-link, though

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -93,6 +93,7 @@
         line-height: $line-height-base;
         
         font-size: $font-size-h4;
+        font-weight: 300;
         // font-family: $font-family-header;
         
         // Gaps between nav items, but not on the first one
