--- a/css/gift-list.scss
+++ b/css/gift-list.scss
@@ -100,13 +100,15 @@ ul
     }
     li.note
     {
-        padding-left: 1.1em;
         font-size: inherit;
         
         &[class*=" fa-"] {
+            padding-left: 1.1em;
             position: relative;
             
             &::before {
+                content: '';
+                
                 display: inline-block;
                 font-family: FontAwesome;
                 font-style: normal;
