Revert FA and more Xmas

--- a/_layouts/gift_list.html
+++ b/_layouts/gift_list.html
@@ -24,7 +24,8 @@
   <header class="top-header">
     <h1>Radish's {{page.occasion}} List</h1>
     <h1>{{page.year}}</h1>
-    <p>In descending order of wanted-ness.</p>
+    <!-- <p>In descending order of wanted-ness.</p> -->
+    <p>In no particular order.</p>
   </header>
   <div class="page-body">
     <article>
