--- a/css/main.scss
+++ b/css/main.scss
@@ -183,3 +183,8 @@ span.egg:hover
         border-bottom: 1px dotted mix(white, $nav-color, 88%);
     }
 }
+
+.emoji
+{
+    font-family: Noto Color Emoji, Apple Color Emoji, Segoe UI Emoji;
+}
