--- a/css/resume-main.scss
+++ b/css/resume-main.scss
@@ -459,6 +459,22 @@ section#education h3
     height: $page-height - 15px;
 }
 
+.page-content.i-have-a-job {
+    display: flex;
+    flex-direction: column;
+    
+    > header {
+        flex-shrink: 0;
+    }
+    > header + * {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
 .a4
 {
     .page
