--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,10 @@
     <section class="footer-col  footer-col-1">
       <div class="shuck">
         <ul class="contact-list jive">
-          <!-- <li>{{ site.title }}</li> -->
-          <li><a href="mailto:{{ site.email }}"><i class="fa fa-envelope-o"></i> {{ site.author }}</a></li>
+          <li>
+            <!-- <a href="mailto:{{ site.email }}"><i class="fa fa-envelope-o"></i> {{ site.author }}</a> -->
+            &nbsp;
+          </li>
           <li>Kent, WA</li>
         </ul>
       </div>
