--- a/_layouts/gift_list.html
+++ b/_layouts/gift_list.html
@@ -18,7 +18,7 @@
 <body>
 
 <main class="document-container gift-list {{page.occasion}}">
-<div class="page page-1">
+<div class="page">
 <div class="page-content">
   
   <header class="top-header">
