--- a/_layouts/gift_list.html
+++ b/_layouts/gift_list.html
@@ -25,7 +25,8 @@
     <h1>Radish's {{page.occasion}} List</h1>
     <h1>{{page.year}}</h1>
     <!-- <p>In descending order of wanted-ness.</p> -->
-    <p>In no particular order.</p>
+    <p>In somewhat prioritized order.</p>
+    <!-- <p>In no particular order.</p> -->
   </header>
   <div class="page-body">
     <article>
